# andromeda-trading-system

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: cmake.yml
apps/andromeda/: CMakeLists.txt  main.cpp
apps/recommendations/: CMakeLists.txt  main.cpp
cmake/: deps.cmake
include/config/: symbols.h
include/ingestion/: finnhub_http.h  finnhub_ws.h  types.h
include/strategy/: recommendation.h
include/util/: env.h  secrets.h  time.h
src/ingestion/: CMakeLists.txt  finnhub_http.cpp  finnhub_ws.cpp
src/ingestion/finnhub/: finnhub_ws.cpp
src/strategy/: CMakeLists.txt  recommendation.cpp
src/util/: CMakeLists.txt  secrets.cpp
